			     BZFlag Release Notes
			     ====================

BZFlag 1.12.0  (was 1.11.x)
---------------------------

* Lighting menu option now has "None / Fast / Best" - Dave Rodgers
* Dev-C++ project files - Ian Agar, Daniel Remenak, Jeff Myers
* Shot accuracy statistics dialog - Daniel Remenak
* Faster zbuffer graphics using octree and dynamic occluders - Dave Rodgers
* Faster startup times by making the SceneDatabase on the fly - Dave Rodgers
* Faster collision detection using a precalculated  grid - Dave Rodgers
* Auto-completion to complete the first few given letters of a callsign - Ian Agar
* /clientquery can now be requested on single individuals - Ian Agar
* Added support for irc-like /me actions and /msg messages - Sean Morrison
* Seer flag now can see Invisible Bullets - Dave Rodgers
* Added admin message sounds - Cameron Mandrake, Sean Morrison
* Better shot reflections for non-square pyramids - Dave Rodgers
* Fixed collision detection impalement problem - Dave Rodgers
* Added anti perm for pollkick, pollban, kick, ban, deregister - Sean Morrison
* Added antipoll bzfs anti perm to protect against poll kick/bans - Andrew Heyn
* Server Start Menu now allows selection between Rabbit Chase styles - Ian Agar
* Tabbed Message Panel - Scott Wichser, Sean Morrison
* Fonts settable via BZDB - Daniel Remenak
* New font management system and fonts - Daniel Remenak, Jeff Myers
* Reduce client and server network utilization via tolerance tweaking
	- Alfredo Tupone, Sean Morrison
* WorldWeapons and EntryZones are saved client-side - Dave Rodgers
* Improved client map saves using map 'options' - Dave Rodgers
* Autopilot is now capable of playing CTF - Ian Agar
* bzadmin can now send and receive team and admin messages - Lars Luthman
* Added _deadUnder (water-like feature for maps) - Dave Rodgers
* bzadmin's curses menu will now update automagically - Lars Luthman
* Added message filter editor for bzadmin using menu or cmds - Lars Luthman 